<resources>
    <string name="app_name">Jokenpo</string>

    <!-- =========== MAIN LAYOUT ===========  -->
    <string name="txt_title"> Jokenpo Game</string>
    <string name="txt_titlePlayer"> Faça sua Jogada: </string>
    <string name="txt_titleComputer"> Oponente: </string>
    <string name="txt_computer"> Computer</string>
    <string name="txt_titleResults"> Jogadas </string>
    <string name="btn_ranking"> Ranking</string>

    <!-- =========== PLAYER LAYOUT ===========  -->
    <string name="txt_description_image"> Monuv</string>
    <string name="hint_player_name"> Insira Nome Jogador(a)</string>
    <string name="btn_play"> Jogar</string>

    <!-- =========== RANKING LAYOUT ===========  -->
    <string name="txt_titleRanking"> Ranking </string>
    <string name="txt_score"> 0 - 0 </string>
    <string name="btn_back"> Back </string>
</resources>