<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".View.MainActivity">

        <View
            android:id="@+id/view_title"
            android:layout_width="200dp"
            android:layout_height="10dp"
            android:layout_marginTop="16dp"
            android:background="@color/pink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_title"
            style="@style/Title"
            android:layout_marginTop="32dp"
            android:text="@string/txt_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/titlePlayerTextView"
            style="@style/SubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/playerNameTextView"
            android:layout_marginTop="40dp"
            android:text="@string/txt_titlePlayer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.065"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/playerNameTextView"
            android:layout_width="103dp"
            android:layout_height="0dp"
            android:layout_below="@id/rockButton"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="36dp"
            android:text="Jogador"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/titlePlayerTextView"
            app:layout_constraintTop_toBottomOf="@+id/view_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/rockButton"
            style="@style/Button"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"
            android:onClick="playGame"
            android:tag="rock"
            android:text="Rock"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titlePlayerTextView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/paperButton"
            style="@style/Button"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"
            android:onClick="playGame"
            android:tag="paper"
            android:text="Paper"
            app:layout_constraintStart_toEndOf="@+id/rockButton"
            app:layout_constraintTop_toBottomOf="@+id/titlePlayerTextView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/scissorsButton"
            style="@style/Button"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"
            android:onClick="playGame"
            android:tag="scissors"
            android:text="Scissor"
            app:layout_constraintStart_toEndOf="@+id/paperButton"
            app:layout_constraintTop_toBottomOf="@+id/titlePlayerTextView" />

        <View
            android:id="@+id/view_Computer"
            android:layout_width="200dp"
            android:layout_height="10dp"
            android:layout_marginTop="40dp"
            android:background="@color/pink"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/paperButton" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/titleComputerTextView"
            style="@style/SubTitle"
            android:layout_below="@id/playerNameTextView"
            android:layout_marginTop="40dp"
            android:text="@string/txt_titleComputer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_Computer" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/computerNameTextView"
            android:layout_width="92dp"
            android:layout_height="21dp"
            android:layout_below="@id/playerNameTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="Computer"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleComputerTextView" />

        <View
            android:id="@+id/view_endComputer"
            android:layout_width="200dp"
            android:layout_height="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="4dp"
            android:background="@color/pink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/computerNameTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/titleResultsTextView"
            style="@style/SubTitle"
            android:layout_below="@id/playerNameTextView"
            android:layout_marginTop="40dp"
            android:text="@string/txt_titleResults"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_endComputer" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/resultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/computerNameTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:text="Resultados"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleResultsTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>